<resources>
    <string name="app_name">MyMovie</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_overview">Overview</string>
    <string name="text_casts">Casts</string>
    <string name="text_release_date">Release Date</string>
    <string name="text_video">Video</string>
    <string name="text_reviews">Reviews</string>
    <string name="text_more">More</string>
    <string name="try_again">Try Again</string>
    <string name="error_message">Oops.. something went wrong</string>
    <string name="no_desc">There is no description in this language</string>
    <string name="text_genres">Genres</string>
    <string name="text_search_movie">Search Movie…</string>
    <string name="text_press_once_again_to_close_app">Press once again to close app</string>
    <string name="text_toggle_full_screen">toggle full screen</string>
    <string name="my">My</string>
    <string name="movie">Movie</string>
</resources>
